--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "squizlabs/php_codesniffer": "*",
     "friendsofphp/php-cs-fixer": "*",
     "codeception/codeception": "*",
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": "~6.0",
+    "monolog/monolog": "*",
+    "sentry/sentry": "*"
   }
 }
