--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "squizlabs/php_codesniffer": "*",
+    "squizlabs/php_codesniffer": "3.*",
     "friendsofphp/php-cs-fixer": "*",
-    "codeception/codeception": "*",
+    "codeception/codeception": "2.*",
     "guzzlehttp/guzzle": "~6.0",
-    "monolog/monolog": "*",
-    "sentry/sentry": "*"
+    "tracy/tracy": "2.*",
+    "codeception/c3": "2.*"
   }
 }
